# Global_Ag_Staples_Yields_by_Tilling_Strategy

./: .gitignore  README.md  Tillage_analysis.ipynb  pyproject.toml
data/: NA_M_WW_clean.csv
data/shapefiles/: mex.shp
