[project]
name = "global-ag-staples-yields-by-tilling-strategy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Henry Zelenak", email = "henryzelenak14@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "plotly>=6.0.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "statsmodels>=0.14.4",
    "matplotlib>=3.10.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "patsy>=1.0.1",
    "sklearn>=0.0.post12",
    "scikit-learn>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/global_ag_staples_yields_by_tilling_strategy"]
